# mailshot

./: LICENSE  README.md  setup.cfg
src/mailshot/: __init__.py  client.py  config.py  mailshot.py  utils.py
tests/: test_client.py  test_utils.py
