[metadata]
name = mailshot
version = 1.0.0
author = Rohan Pednekar
author_email = developer.rohan.pednekar@gmail.com
description = Mailshot is a simple package to send email via Gmail.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rohan-pednekar/mailshot
project_urls =
    Bug Tracker = https://github.com/rohan-pednekar/mailshot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src